AddressFactoryTest with use of MockedConstruction