@@ -48,6 +48,12 @@
         </dependency>
 
         <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>1.14.12</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit-jupiter}</version>
@@ -56,8 +62,8 @@
 
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>3.5.10</version>
+            <artifactId>mockito-inline</artifactId>
+            <version>4.5.1</version>
             <scope>test</scope>
         </dependency>
 
@@ -66,11 +72,13 @@
             <artifactId>commons-configuration2</artifactId>
             <version>2.9.0</version>
         </dependency>
+
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
             <version>1.9.4</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -87,6 +95,10 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin}</version>
                 <configuration>
+                    <argLine>
+                        -XX:+EnableDynamicAgentLoading
+                        @{argLine} -Xshare:off
+                    </argLine>
                     <includes>
                         <include>**/Test*.java</include>
                         <include>**/*Test.java</include>
